fixed bug with scrollbar appearing sometimes

--- a/media/main.css
+++ b/media/main.css
@@ -5,7 +5,6 @@ body {
 
 .submitMsg {
     position: fixed;
-    bottom: 5px;
     height: 10vh;
     max-height: 25vh;
 }
